@@ -5,7 +5,7 @@ AC_PREREQ(2.5)
 AC_INIT(src/main.cpp)
 AC_CANONICAL_SYSTEM
 AM_CONFIG_HEADER(conf.h)
-AM_INIT_AUTOMAKE(showeq, 5.0.0.1)
+AM_INIT_AUTOMAKE(showeq, 5.0.0.2)
 AM_MAINTAINER_MODE
 
 dnl Use CCd/CXXd rather than CC/CXX otherwise it cache's the value
